# argos3-rvr

./: .gitignore  README.asciidoc
src/: CMakeLists.txt
src/cmake/: ARGoSBuildChecks.cmake  ARGoSBuildOptions.cmake
src/plugins/robots/: CMakeLists.txt
src/plugins/robots/rvr/: CMakeLists.txt  Interface.cmake  SimLibrary.cmake  VisionTools.cmake
src/plugins/robots/rvr/control_interface/: ci_rvr_accelerometer_sensor.cpp  ci_rvr_accelerometer_sensor.h  ci_rvr_colored_blob_omnidirectional_camera_sensor.cpp  ci_rvr_colored_blob_omnidirectional_camera_sensor.h  ci_rvr_ground_color_sensor.cpp  ci_rvr_ground_color_sensor.h  ci_rvr_gyroscope_sensor.cpp  ci_rvr_gyroscope_sensor.h  ci_rvr_imu_sensor.cpp  ci_rvr_imu_sensor.h  ci_rvr_lidar_sensor.cpp  ci_rvr_lidar_sensor.h  ci_rvr_light_sensor.cpp  ci_rvr_light_sensor.h  ci_rvr_locator_sensor.cpp  ci_rvr_locator_sensor.h  ci_rvr_proximity_sensor.cpp  ci_rvr_proximity_sensor.h  ci_rvr_quaternion_sensor.cpp  ci_rvr_quaternion_sensor.h  ci_rvr_range_and_bearing_actuator.cpp  ci_rvr_range_and_bearing_actuator.h  ci_rvr_range_and_bearing_sensor.cpp  ci_rvr_range_and_bearing_sensor.h  ci_rvr_rgb_leds_actuator.cpp  ci_rvr_rgb_leds_actuator.h  ci_rvr_velocity_sensor.cpp  ci_rvr_velocity_sensor.h  ci_rvr_wheels_actuator.cpp  ci_rvr_wheels_actuator.h
src/plugins/robots/rvr/simulator/: OBJLoader.h  dynamics2d_rvr_model.cpp  dynamics2d_rvr_model.h  qtopengl_rvr.cpp  qtopengl_rvr.h  rvr_accelerometer_sensor.cpp  rvr_accelerometer_sensor.h  rvr_colored_blob_omnidirectional_camera_rotzonly_sensor.cpp  rvr_entity.cpp  rvr_entity.h  (+35 more)
